tests/paczka1/fuzzy1/91529342.err
Error in line 2: IwXVxw A236 75,0
Error in line 4: A485 A236 31,4
Error in line 1: aPwoqjEbzBK S541 26,2
Error in line 22: PfsUnC3 A236 33,2
Error in line 33: aPwoqjEbzBK A236 607,3
